Update some comment.

--- a/chess.html
+++ b/chess.html
@@ -1,12 +1,12 @@
-_____   _   _   _____   _____   _____  
+<!--
+    _____   _   _   _____   _____   _____  
 /  ___| | | | | | ____| /  ___/ /  ___/ 
 | |     | |_| | | |__   | |___  | |___  
 | |     |  _  | |  __|  \___  \ \___  \ 
 | |___  | | | | | |___   ___| |  ___| | 
 \_____| |_| |_| |_____| /_____/ /_____/ 
-
-
-<!-- CONTACT ME on la.devweb@yahoo.com -->
+    CONTACT ME on la.devweb@yahoo.com -->
+    
 
 <head>
     <link rel="stylesheet" type="text/css" href="board.css">
