Change file name and add pieces function into chess file.

--- a/chess.html
+++ b/chess.html
@@ -13,6 +13,5 @@
     <link rel="stylesheet" type="text/css" href="pieces.css">
 </head>
 <body>
-    <script src="board.js"></script>
-    <script src="pieces.js"></script>
+    <script src="chess.js"></script>
 </body>
