--- a/chess.html
+++ b/chess.html
@@ -9,8 +9,8 @@
 
 
 <head>
-    <link rel="stylesheet" type="text/css" href="board.css">
-    <link rel="stylesheet" type="text/css" href="pieces.css">
+    <link rel="stylesheet" type="text/css" href="styles/board.css">
+    <link rel="stylesheet" type="text/css" href="styles/pieces.css">
 </head>
 <body>
     <script src="chess.js"></script>
