--- a/chess.html
+++ b/chess.html
@@ -5,7 +5,8 @@
 | |     |  _  | |  __|  \___  \ \___  \ 
 | |___  | | | | | |___   ___| |  ___| | 
 \_____| |_| |_| |_____| /_____/ /_____/ 
-    CONTACT ME on la.devweb@yahoo.com -->
+    CONTACT ME on la.devweb@yahoo.com 
+-->
 
 
 <head>
