Change chess path.

--- a/chess.html
+++ b/chess.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="styles/pieces.css">
 </head>
 <body>
-    <script src="chess.js"></script>
+    <script src="scripts/chess.js"></script>
     <script src="scripts/pieces.js"></script>
 
 </body>
