--- a/chess.html
+++ b/chess.html
@@ -16,5 +16,6 @@
 <body>
     <script src="scripts/chess.js"></script>
     <script src="scripts/pieces.js"></script>
+    <script src="scripts/console.js"></script>
 
 </body>
