Add css file and update board files about console item.

--- a/chess.html
+++ b/chess.html
@@ -12,10 +12,14 @@
 <head>
     <link rel="stylesheet" type="text/css" href="styles/board.css">
     <link rel="stylesheet" type="text/css" href="styles/pieces.css">
+    <link rel="stylesheet" type="text/css" href="styles/console.css">
 </head>
 <body>
     <script src="scripts/chess.js"></script>
     <script src="scripts/pieces.js"></script>
     <script src="scripts/console.js"></script>
 
+    <div id="console">
+        <div id="title">CONSOLE</div>
+    </div>
 </body>
